--- a/PInvoke/ComCtl32/Vanara.PInvoke.ComCtl32.csproj
+++ b/PInvoke/ComCtl32/Vanara.PInvoke.ComCtl32.csproj
@@ -37,6 +37,8 @@ Interfaces
 IImageList, IImageList2
 
 </PackageReleaseNotes>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <LangVersion>latest</LangVersion>
     <ApplicationManifest>Library.manifest</ApplicationManifest>
     <SignAssembly>true</SignAssembly>
@@ -67,5 +69,8 @@ IImageList, IImageList2
     <ProjectReference Include="..\Kernel32\Vanara.PInvoke.Kernel32.csproj" />
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
     <ProjectReference Include="..\User32\Vanara.PInvoke.User32.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All"/>
   </ItemGroup>
 </Project>
