--- a/PInvoke/Gdi32/Vanara.PInvoke.Gdi32.csproj
+++ b/PInvoke/Gdi32/Vanara.PInvoke.Gdi32.csproj
@@ -34,6 +34,8 @@ Structures
 SCRIPT_ANALYSIS, SCRIPT_CONTROL, SCRIPT_DIGITSUBSTITUTE, SCRIPT_LOGATTR, SCRIPT_STATE, SCRIPT_VISATTR, GRADIENT_TRIANGLE, HSECTION, TRIVERTEX, BITMAP, BITMAPINFO, BITMAPINFOHEADER, DIBSECTION, RGBQUAD, BLENDFUNCTION, LOGBRUSH, CIEXYZ, CIEXYZTRIPLE, COLORADJUSTMENT, LOGCOLORSPACE, PALETTEENTRY, RGBTRIPLE, LOGPALETTE, XFORM, CHARSETINFO, DISPLAY_DEVICE, DISPLAYCONFIG_2DREGION, DISPLAYCONFIG_ADAPTER_NAME, DISPLAYCONFIG_DESKTOP_IMAGE_INFO, DISPLAYCONFIG_DEVICE_INFO_HEADER, DISPLAYCONFIG_GET_ADVANCED_COLOR_INFO, DISPLAYCONFIG_MODE_INFO, DISPLAYCONFIG_PATH_INFO, DISPLAYCONFIG_PATH_SOURCE_INFO, DISPLAYCONFIG_PATH_TARGET_INFO, DISPLAYCONFIG_RATIONAL, DISPLAYCONFIG_SDR_WHITE_LEVEL, DISPLAYCONFIG_SET_ADVANCED_COLOR_STATE, DISPLAYCONFIG_SET_TARGET_PERSISTENCE, DISPLAYCONFIG_SOURCE_DEVICE_NAME, DISPLAYCONFIG_SOURCE_MODE, DISPLAYCONFIG_SUPPORT_VIRTUAL_RESOLUTION, DISPLAYCONFIG_TARGET_BASE_TYPE, DISPLAYCONFIG_TARGET_DEVICE_NAME, DISPLAYCONFIG_TARGET_MODE, DISPLAYCONFIG_TARGET_PREFERRED_MODE, DISPLAYCONFIG_VIDEO_SIGNAL_INFO, ABC, ABCFLOAT, AXESLIST, AXISINFO, DESIGNVECTOR, ENUMLOGFONT, ENUMLOGFONTEX, ENUMLOGFONTEXDV, ENUMTEXTMETRIC, FIXED, FONTSIGNATURE, GCP_RESULTS, GLYPHMETRICS, GLYPHSET, KERNINGPAIR, MAT2, NEWTEXTMETRIC, NEWTEXTMETRICEX, OUTLINETEXTMETRIC, PANOSE, POLYTEXT, RASTERIZER_STATUS, WCRANGE, ENHMETAHEADER, HANDLETABLE, METAFILEPICT, PIXELFORMATDESCRIPTOR, EXTLOGPEN, LOGPEN, RGNDATAHEADER, RGNDATA, TEXTMETRIC, Union, Union
 
 </PackageReleaseNotes>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <LangVersion>latest</LangVersion>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\Vanara.snk</AssemblyOriginatorKeyFile>
@@ -56,5 +58,8 @@ SCRIPT_ANALYSIS, SCRIPT_CONTROL, SCRIPT_DIGITSUBSTITUTE, SCRIPT_LOGATTR, SCRIPT_
     <PackageReference Include="System.Drawing.Common">
       <Version>4.6.0</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All"/>
   </ItemGroup>
 </Project>
