--- a/PInvoke/User32/Vanara.PInvoke.User32.csproj
+++ b/PInvoke/User32/Vanara.PInvoke.User32.csproj
@@ -34,6 +34,8 @@ Structures
 ICONINFO, VIDEOPARAMETERS, NMHDR, ACCEL, METAFILEPICT, CURSORINFO, DEV_BROADCAST_DEVICEINTERFACE, DEV_BROADCAST_DEVNODE, DEV_BROADCAST_HANDLE, DEV_BROADCAST_HDR, DEV_BROADCAST_NET, DEV_BROADCAST_OEM, DEV_BROADCAST_PORT, DEV_BROADCAST_USERDEFINED, DEV_BROADCAST_VOLUME, HDEVNOTIFY, VolLockBroadcast, USEROBJECTFLAGS, DLGITEMTEMPLATE, DLGTEMPLATE, MINMAXINFO, WINDOWPOS, DRAWTEXTPARAMS, HELPWININFO, MULTIKEYHELP, DPI_AWARENESS_CONTEXT, CBT_CREATEWND, CBTACTIVATESTRUCT, CWPRETSTRUCT, CWPSTRUCT, DEBUGHOOKINFO, EVENTMSG, HHOOK, HWINEVENTHOOK, KBDLLHOOKSTRUCT, MOUSEHOOKSTRUCT, MOUSEHOOKSTRUCTEX, MSLLHOOKSTRUCT, ICONINFOEX, HARDWAREINPUT, HRAWINPUT, INPUT, INPUT_MESSAGE_SOURCE, LASTINPUTINFO, MOUSEINPUT, RAWHID, RAWINPUT, RAWINPUTDEVICE, RAWINPUTDEVICELIST, RAWINPUTHEADER, RAWKEYBOARD, RAWMOUSE, RID_DEVICE_INFO, RID_DEVICE_INFO_HID, RID_DEVICE_INFO_KEYBOARD, RID_DEVICE_INFO_MOUSE, HKL, KEYBDINPUT, MDINEXTMENU, MENUBARINFO, MENUEX_TEMPLATE_HEADER, MENUEX_TEMPLATE_ITEM, MENUGETOBJECTINFO, MENUINFO, MENUITEMINFO, MENUITEMTEMPLATE, MENUITEMTEMPLATEHEADER, TPMPARAMS, BSMINFO, MONITORINFO, MONITORINFOEX, MOUSEMOVEPOINT, TRACKMOUSEEVENT, PAINTSTRUCT, INPUT_TRANSFORM, POINTER_DEVICE_CURSOR_INFO, POINTER_DEVICE_INFO, POINTER_DEVICE_PROPERTY, POINTER_INFO, POINTER_PEN_INFO, POINTER_TOUCH_INFO, GRPICONDIR, GRPICONDIRENTRY, SCROLLBARINFO, SCROLLINFO, ACCESSTIMEOUT, ANIMATIONINFO, AUDIODESCRIPTION, FILTERKEYS, HELPINFO, HIGHCONTRAST, ICONMETRICS, MINIMIZEDMETRICS, MOUSEKEYS, MSGBOXPARAMS, NONCLIENTMETRICS, SERIALKEYS, SOUNDSENTRY, STICKYKEYS, TOGGLEKEYS, TOUCHPREDICTIONPARAMETERS, GESTURECONFIG, GESTUREINFO, GESTURENOTIFYSTRUCT, HGESTUREINFO, HTOUCHINPUT, TOUCH_HIT_TESTING_INPUT, TOUCH_HIT_TESTING_PROXIMITY_EVALUATION, TOUCHINPUT, ALTTABINFO, CHANGEFILTERSTRUCT, FLASHWINFO, GUITHREADINFO, TITLEBARINFO, UPDATELAYEREDWINDOWINFO, WINDOWINFO, WINDOWPLACEMENT, WNDCLASS, WNDCLASSEX, DATA
 
 </PackageReleaseNotes>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <LangVersion>latest</LangVersion>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\Vanara.snk</AssemblyOriginatorKeyFile>
@@ -61,5 +63,8 @@ ICONINFO, VIDEOPARAMETERS, NMHDR, ACCEL, METAFILEPICT, CURSORINFO, DEV_BROADCAST
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Extensions\" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All"/>
   </ItemGroup>
 </Project>
