--- a/PInvoke/KtmW32/Vanara.PInvoke.KtmW32.csproj
+++ b/PInvoke/KtmW32/Vanara.PInvoke.KtmW32.csproj
@@ -34,6 +34,8 @@ Structures
 HENLISTMENT, HRESMGR, HTRXNMGR, TRANSACTION_NOTIFICATION, TRANSACTION_NOTIFICATION_RECOVERY_ARGUMENT
 
 </PackageReleaseNotes>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <LangVersion>latest</LangVersion>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\Vanara.snk</AssemblyOriginatorKeyFile>
@@ -61,5 +63,8 @@ HENLISTMENT, HRESMGR, HTRXNMGR, TRANSACTION_NOTIFICATION, TRANSACTION_NOTIFICATI
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
     <ProjectReference Include="..\Kernel32\Vanara.PInvoke.Kernel32.csproj" />
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All"/>
   </ItemGroup>
 </Project>
