--- a/PInvoke/NTDSApi/Vanara.PInvoke.NTDSApi.csproj
+++ b/PInvoke/NTDSApi/Vanara.PInvoke.NTDSApi.csproj
@@ -34,6 +34,8 @@ Structures
 DCInfoHandle, DS_DOMAIN_CONTROLLER_INFO_1, DS_DOMAIN_CONTROLLER_INFO_2, DS_DOMAIN_CONTROLLER_INFO_3, DS_NAME_RESULT, DS_NAME_RESULT_ITEM, DS_REPL_ATTR_META_DATA, DS_REPL_ATTR_META_DATA_2, DS_REPL_ATTR_META_DATA_BLOB, DS_REPL_ATTR_VALUE_META_DATA, DS_REPL_ATTR_VALUE_META_DATA_2, DS_REPL_ATTR_VALUE_META_DATA_EXT, DS_REPL_CURSOR, DS_REPL_CURSOR_2, DS_REPL_CURSOR_3W, DS_REPL_CURSOR_BLOB, DS_REPL_CURSORS, DS_REPL_CURSORS_2, DS_REPL_CURSORS_3W, DS_REPL_KCC_DSA_FAILURESW, DS_REPL_KCC_DSA_FAILUREW, DS_REPL_KCC_DSA_FAILUREW_BLOB, DS_REPL_NEIGHBOR, DS_REPL_NEIGHBORS, DS_REPL_NEIGHBORW_BLOB, DS_REPL_OBJ_META_DATA, DS_REPL_OBJ_META_DATA_2, DS_REPL_OPW, DS_REPL_OPW_BLOB, DS_REPL_PENDING_OPSW, DS_REPL_QUEUE_STATISTICSW, DS_REPL_VALUE_META_DATA, DS_REPL_VALUE_META_DATA_2, DS_REPL_VALUE_META_DATA_BLOB, DS_REPL_VALUE_META_DATA_BLOB_EXT, DS_REPL_VALUE_META_DATA_EXT, DS_REPSYNCALL_ERRINFO, DS_REPSYNCALL_UPDATE, DS_SCHEMA_GUID_MAP, DS_SITE_COST_INFO, SCHEDULE_HEADER, SpnArrayHandle, SCHEDULE
 
 </PackageReleaseNotes>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <LangVersion>latest</LangVersion>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\Vanara.snk</AssemblyOriginatorKeyFile>
@@ -60,5 +62,8 @@ DCInfoHandle, DS_DOMAIN_CONTROLLER_INFO_1, DS_DOMAIN_CONTROLLER_INFO_2, DS_DOMAI
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All"/>
   </ItemGroup>
 </Project>
