--- a/PInvoke/NetListMgr/Vanara.PInvoke.NetListMgr.csproj
+++ b/PInvoke/NetListMgr/Vanara.PInvoke.NetListMgr.csproj
@@ -34,6 +34,8 @@ Interfaces
 IEnumNetworkConnections, IEnumNetworks, INetwork, INetworkConnection, INetworkConnectionCost, INetworkConnectionCostEvents, INetworkConnectionEvents, INetworkCostManager, INetworkCostManagerEvents, INetworkEvents, INetworkListManager, INetworkListManagerEvents
 
 </PackageReleaseNotes>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <LangVersion>latest</LangVersion>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\Vanara.snk</AssemblyOriginatorKeyFile>
@@ -65,5 +67,8 @@ IEnumNetworkConnections, IEnumNetworks, INetwork, INetworkConnection, INetworkCo
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
     <ProjectReference Include="..\Ole\Vanara.PInvoke.Ole.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All"/>
   </ItemGroup>
 </Project>
