--- a/PInvoke/Pdh/Vanara.PInvoke.Pdh.csproj
+++ b/PInvoke/Pdh/Vanara.PInvoke.Pdh.csproj
@@ -34,6 +34,8 @@ Structures
 PDH_BROWSE_DLG_CONFIG, PDH_BROWSE_DLG_CONFIG_H, PDH_COUNTER_INFO, PDH_COUNTER_PATH_ELEMENTS, PDH_DATA_ITEM_PATH_ELEMENTS, PDH_FMT_COUNTERVALUE, PDH_FMT_COUNTERVALUE_ITEM, PDH_HCOUNTER, PDH_HLOG, PDH_HQUERY, PDH_RAW_COUNTER, PDH_RAW_COUNTER_ITEM, PDH_RAW_LOG_RECORD, PDH_STATISTICS, PDH_TIME_INFO
 
 </PackageReleaseNotes>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <LangVersion>latest</LangVersion>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\Vanara.snk</AssemblyOriginatorKeyFile>
@@ -61,5 +63,8 @@ PDH_BROWSE_DLG_CONFIG, PDH_BROWSE_DLG_CONFIG_H, PDH_COUNTER_INFO, PDH_COUNTER_PA
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
     <ProjectReference Include="..\Kernel32\Vanara.PInvoke.Kernel32.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All"/>
   </ItemGroup>
 </Project>
