--- a/PInvoke/VirtDisk/Vanara.PInvoke.VirtDisk.csproj
+++ b/PInvoke/VirtDisk/Vanara.PInvoke.VirtDisk.csproj
@@ -34,6 +34,8 @@ Structures
 APPLY_SNAPSHOT_VHDSET_PARAMETERS, ATTACH_VIRTUAL_DISK_PARAMETERS, COMPACT_VIRTUAL_DISK_PARAMETERS, CREATE_VIRTUAL_DISK_PARAMETERS, DELETE_SNAPSHOT_VHDSET_PARAMETERS, EXPAND_VIRTUAL_DISK_PARAMETERS, GET_VIRTUAL_DISK_INFO, MERGE_VIRTUAL_DISK_PARAMETERS, MIRROR_VIRTUAL_DISK_PARAMETERS, QUERY_CHANGES_VIRTUAL_DISK_RANGE, RAW_SCSI_VIRTUAL_DISK_PARAMETERS, RAW_SCSI_VIRTUAL_DISK_RESPONSE, RESIZE_VIRTUAL_DISK_PARAMETERS, STORAGE_DEPENDENCY_INFO, STORAGE_DEPENDENCY_INFO_TYPE_1, STORAGE_DEPENDENCY_INFO_TYPE_2, TAKE_SNAPSHOT_VHDSET_PARAMETERS, VIRTUAL_DISK_HANDLE, VIRTUAL_DISK_PROGRESS, VIRTUAL_STORAGE_TYPE, OPEN_VIRTUAL_DISK_PARAMETERS, APPLY_SNAPSHOT_VHDSET_PARAMETERS_Version1, ATTACH_VIRTUAL_DISK_PARAMETERS_Version1, COMPACT_VIRTUAL_DISK_PARAMETERS_Version1, CREATE_VIRTUAL_DISK_PARAMETERS_Version1, CREATE_VIRTUAL_DISK_PARAMETERS_Version2, CREATE_VIRTUAL_DISK_PARAMETERS_Version3, DELETE_SNAPSHOT_VHDSET_PARAMETERS_Version1, EXPAND_VIRTUAL_DISK_PARAMETERS_Version1, GET_VIRTUAL_DISK_INFO_ChangeTrackingState, GET_VIRTUAL_DISK_INFO_ParentLocation, GET_VIRTUAL_DISK_INFO_PhysicalDisk, GET_VIRTUAL_DISK_INFO_Size, MERGE_VIRTUAL_DISK_PARAMETERS_V1, MERGE_VIRTUAL_DISK_PARAMETERS_V2, MIRROR_VIRTUAL_DISK_PARAMETERS_Version1, MODIFY_VHDSET_PARAMETERS_Version1_SnapshotPath, RAW_SCSI_VIRTUAL_DISK_PARAMETERS_Version1, RAW_SCSI_VIRTUAL_DISK_RESPONSE_Version1, RESIZE_VIRTUAL_DISK_PARAMETERS_Version1, SET_VIRTUAL_DISK_INFO_ParentLocator, SET_VIRTUAL_DISK_INFO_ParentPathWithDepthInfo, TAKE_SNAPSHOT_VHDSET_PARAMETERS_Version1, OPEN_VIRTUAL_DISK_PARAMETERS_Version1, OPEN_VIRTUAL_DISK_PARAMETERS_Version2, OPEN_VIRTUAL_DISK_PARAMETERS_Version3
 
 </PackageReleaseNotes>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <LangVersion>latest</LangVersion>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\Vanara.snk</AssemblyOriginatorKeyFile>
@@ -52,5 +54,8 @@ APPLY_SNAPSHOT_VHDSET_PARAMETERS, ATTACH_VIRTUAL_DISK_PARAMETERS, COMPACT_VIRTUA
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
     <ProjectReference Include="..\Kernel32\Vanara.PInvoke.Kernel32.csproj" />
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All"/>
   </ItemGroup>
 </Project>
