--- a/PInvoke/Wer/Vanara.PInvoke.Wer.csproj
+++ b/PInvoke/Wer/Vanara.PInvoke.Wer.csproj
@@ -34,6 +34,8 @@ Structures
 HREPORT, HREPORTSTORE, WER_DUMP_CUSTOM_OPTIONS, WER_EXCEPTION_INFORMATION, WER_REPORT_INFORMATION, WER_REPORT_METADATA_V2, WER_REPORT_PARAMETER, WER_REPORT_SIGNATURE
 
 </PackageReleaseNotes>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <LangVersion>latest</LangVersion>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\Vanara.snk</AssemblyOriginatorKeyFile>
@@ -61,5 +63,8 @@ HREPORT, HREPORTSTORE, WER_DUMP_CUSTOM_OPTIONS, WER_EXCEPTION_INFORMATION, WER_R
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
     <ProjectReference Include="..\Kernel32\Vanara.PInvoke.Kernel32.csproj" />
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All"/>
   </ItemGroup>
 </Project>
