--- a/PInvoke/WinINet/Vanara.PInvoke.WinINet.csproj
+++ b/PInvoke/WinINet/Vanara.PInvoke.WinINet.csproj
@@ -34,6 +34,8 @@ Structures
 GOPHER_ATTRIBUTE_TYPE, GOPHER_FIND_DATA, HFINDCACHE, HCACHEENTRYSTREAM, HINTERNET, INTERNET_AUTH_NOTIFY_DATA, INTERNET_BUFFERS, INTERNET_CACHE_CONFIG_INFO, INTERNET_CACHE_CONFIG_PATH_ENTRY, INTERNET_CACHE_ENTRY_INFO, INTERNET_CACHE_ENTRY_INFO_MGD, INTERNET_CACHE_TIMESTAMPS, INTERNET_CERTIFICATE_INFO, INTERNET_DIAGNOSTIC_SOCKET_INFO, INTERNET_PER_CONN_OPTION, INTERNET_PER_CONN_OPTION_LIST, INTERNET_PROXY_INFO, INTERNET_VERSION_INFO, URL_COMPONENTS, ATTRIBUTETYPE, INTERNET_PER_CONN_OPTION_Value, GOPHER_ADMIN_ATTRIBUTE_TYPE, GOPHER_MOD_DATE_ATTRIBUTE_TYPE, GOPHER_TTL_ATTRIBUTE_TYPE, GOPHER_SCORE_ATTRIBUTE_TYPE, GOPHER_SCORE_RANGE_ATTRIBUTE_TYPE, GOPHER_SITE_ATTRIBUTE_TYPE, GOPHER_ORGANIZATION_ATTRIBUTE_TYPE, GOPHER_LOCATION_ATTRIBUTE_TYPE, GOPHER_GEOGRAPHICAL_LOCATION_ATTRIBUTE_TYPE, GOPHER_TIMEZONE_ATTRIBUTE_TYPE, GOPHER_PROVIDER_ATTRIBUTE_TYPE, GOPHER_VERSION_ATTRIBUTE_TYPE, GOPHER_ABSTRACT_ATTRIBUTE_TYPE, GOPHER_VIEW_ATTRIBUTE_TYPE, GOPHER_VERONICA_ATTRIBUTE_TYPE, GOPHER_ASK_ATTRIBUTE_TYPE, GOPHER_UNKNOWN_ATTRIBUTE_TYPE
 
 </PackageReleaseNotes>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <LangVersion>latest</LangVersion>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\Vanara.snk</AssemblyOriginatorKeyFile>
@@ -60,5 +62,8 @@ GOPHER_ATTRIBUTE_TYPE, GOPHER_FIND_DATA, HFINDCACHE, HCACHEENTRYSTREAM, HINTERNE
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All"/>
   </ItemGroup>
 </Project>
