--- a/PInvoke/WinTrust/Vanara.PInvoke.WinTrust.csproj
+++ b/PInvoke/WinTrust/Vanara.PInvoke.WinTrust.csproj
@@ -34,6 +34,8 @@ Structures
 CATALOG_INFO, CRYPTCATATTRIBUTE, CRYPTCATCDF, CRYPTCATMEMBER, CRYPTCATSTORE, HCATALOG, HCATINFO, MS_ADDINFO_BLOB, MS_ADDINFO_CATALOGMEMBER, MS_ADDINFO_FLAT, SIP_ADD_NEWPROVIDER, SIP_CAP_SET_V2, SIP_CAP_SET_V3, SIP_DISPATCH_INFO, SIP_INDIRECT_DATA, SIP_SUBJECTINFO, CRYPT_PROVIDER_CERT, CRYPT_PROVIDER_DATA, CRYPT_PROVIDER_DEFUSAGE, CRYPT_PROVIDER_FUNCTIONS, CRYPT_PROVIDER_PRIVDATA, CRYPT_PROVIDER_REGDEFUSAGE, CRYPT_PROVIDER_SGNR, CRYPT_PROVIDER_SIGSTATE, CRYPT_PROVUI_DATA, CRYPT_PROVUI_FUNCS, CRYPT_REGISTER_ACTIONID, CRYPT_TRUST_REG_ENTRY, HCATADMIN, HCRYPTMSG, SPC_INDIRECT_DATA_CONTENT, WIN_CERTIFICATE, WINTRUST_BLOB_INFO, WINTRUST_CATALOG_INFO, WINTRUST_CERT_INFO, WINTRUST_FILE_INFO, WINTRUST_SGNR_INFO, WINTRUST_SIGNATURE_SETTINGS, WINTRUST_DATA
 
 </PackageReleaseNotes>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <LangVersion>latest</LangVersion>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\Vanara.snk</AssemblyOriginatorKeyFile>
@@ -61,5 +63,8 @@ CATALOG_INFO, CRYPTCATATTRIBUTE, CRYPTCATCDF, CRYPTCATMEMBER, CRYPTCATSTORE, HCA
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
     <ProjectReference Include="..\Cryptography\Vanara.PInvoke.Cryptography.csproj" />
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All"/>
   </ItemGroup>
 </Project>
