--- a/PInvoke/Ws2_32/Vanara.PInvoke.Ws2_32.csproj
+++ b/PInvoke/Ws2_32/Vanara.PInvoke.Ws2_32.csproj
@@ -34,6 +34,8 @@ Structures
 FLOWSPEC, IN_ADDR, IN6_ADDR, QOS, SOCKADDR_IN, SOCKADDR_IN6, SOCKADDR_IN6_PAIR, SOCKADDR_IN6_PAIR_NATIVE, SOCKADDR_INET, SOCKET, SOCKET_ADDRESS, WSABUF, WSADATA, WSAPROTOCOL_INFO, WSAPROTOCOLCHAIN, ADDRINFOW, SOCKADDR_STORAGE
 
 </PackageReleaseNotes>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <LangVersion>latest</LangVersion>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\Vanara.snk</AssemblyOriginatorKeyFile>
@@ -60,5 +62,8 @@ FLOWSPEC, IN_ADDR, IN6_ADDR, QOS, SOCKADDR_IN, SOCKADDR_IN6, SOCKADDR_IN6_PAIR, 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All"/>
   </ItemGroup>
 </Project>
