--- a/VirtualDisk/Vanara.VirtualDisk.csproj
+++ b/VirtualDisk/Vanara.VirtualDisk.csproj
@@ -33,6 +33,8 @@ Enumerations
 DeviceType, Subtype
 
 </PackageReleaseNotes>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <LangVersion>latest</LangVersion>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\Vanara.snk</AssemblyOriginatorKeyFile>
@@ -55,5 +57,8 @@ DeviceType, Subtype
   <ItemGroup>
     <ProjectReference Include="..\PInvoke\Security\Vanara.PInvoke.Security.csproj" />
     <ProjectReference Include="..\PInvoke\VirtDisk\Vanara.PInvoke.VirtDisk.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All"/>
   </ItemGroup>
 </Project>
