--- a/WIndows.Forms/Vanara.Windows.Forms.csproj
+++ b/WIndows.Forms/Vanara.Windows.Forms.csproj
@@ -33,6 +33,8 @@ Enumerations
 BitmapProperty, BoolProperty, CloakingSource, CollapsiblePanelBorderCondition, CollapsiblePanelHeaderState, ColorProperty, ControlState, Corners, EnumProperty, ExplorerBrowserContentSectionOptions, ExplorerBrowserLoadFlags, ExplorerBrowserNavigateOptions, ExplorerBrowserNavigationItemCategory, ExplorerBrowserViewMode, FilenameProperty, Flip3DWindowPolicy, FolderBrowserDialogOptions, FontProperty, IconSize, IntProperty, KnownFolder, MarginsProperty, MetricProperty, NavigationLogDirection, NonClientRenderingPolicy, PaneVisibilityState, PartSize, PositionProperty, ProgressBarState, PropertyOrigin, RectangleProperty, RenderStyle, SecurityPageType, ShellProgressDialogStyle, SizeMode, StringProperty, TaskDialogButtonDisplay, TaskDialogCommonButtons, TaskDialogIcon
 
 </PackageReleaseNotes>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <LangVersion>latest</LangVersion>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\Vanara.snk</AssemblyOriginatorKeyFile>
@@ -148,5 +150,8 @@ BitmapProperty, BoolProperty, CloakingSource, CollapsiblePanelBorderCondition, C
     <Compile Update="Extenders\VistaControlExtender.cs">
       <SubType>Component</SubType>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All"/>
   </ItemGroup>
 </Project>
