--- a/UnitTests/PInvoke/UserEnv/UserEnv.csproj
+++ b/UnitTests/PInvoke/UserEnv/UserEnv.csproj
@@ -44,6 +44,7 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreateEnvironmentBlockTest_And_DestroyEnvironmentBlockTest.cs" />
     <Compile Include="UserEnvTests.cs" />
   </ItemGroup>
   <ItemGroup>
